--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
+    <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/etch-a-sketch.js" defer></script>
 </head>
 <body>
-    <div id="container"></div>
+    <div class="container"></div>
 </body>
 </html>
