--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="scripts/etch-a-sketch.js" defer></script>
 </head>
 <body>
+    <button id="btnSetSquares">Set number of squares</button>
     <div class="container"></div>
 </body>
 </html>
